--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-helmet": "^6.1.0",
     "autoprefixer": "9",
     "axios": "^0.21.1",
+    "firebase": "^8.2.6",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "postcss": "7",
