--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prebuild": "npm run build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "netlify": "CI= react-scripts build",
+    "netlify": "CI= npm run build:tailwind && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
