--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "scripts": {
     "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
-    "prestart": "npm run build:tailwind",
-    "prebuild": "npm run build:tailwind",
+    "prestart": "yarn build:tailwind",
+    "prebuild": "yarn build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "netlify": "CI= npm run build:tailwind && react-scripts build",
+    "netlify": "CI= yarn build:tailwind && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
