--- a/package.json
+++ b/package.json
@@ -1,68 +1,25 @@
 {
-  "name": "honeybear-project-starter",
-  "version": "0.1.0",
+  "name": "reception",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "repository": "https://github.com/erlanggaadikara/Reception.git",
+  "author": "Erlangga <erlangga@cactiva.app>",
+  "license": "MIT",
   "private": true,
+  "workspaces": [
+    "web",
+    "server",
+    "function"
+  ],
   "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.3",
-    "@reach/router": "^1.3.4",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.0.0",
-    "@types/reach__router": "^1.3.6",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "autoprefixer": "9",
-    "axios": "^0.21.1",
-    "firebase": "^8.2.6",
-    "lodash": "^4.17.20",
-    "mobx": "^6.0.4",
-    "mobx-react-lite": "^3.1.6",
-    "postcss": "7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-inline-input-edit": "^1.0.2",
-    "react-scripts": "4.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "@types/node": "^14.14.31",
+    "typescript": "^4.2.3"
   },
   "scripts": {
-    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css",
-    "prestart": "yarn build:tailwind",
-    "prebuild": "yarn build:tailwind",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "netlify": "yarn build:tailwind && CI= react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "ezwork": "nodemon index.js",
+    "web": "yarn workspace web",
+    "server": "yarn workspace server",
+    "function": "yarn workspace function"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {}
+  "type": "module"
 }
