--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "@types/uuid": "^8.3.0",
     "autoprefixer": "9",
     "axios": "^0.21.1",
     "firebase": "^8.2.6",
@@ -32,6 +33,7 @@
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
   },
