--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.0.3",
+    "use-async-effect": "^2.2.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
