--- a/function/package.json
+++ b/function/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "author": "Erlangga",
   "dependencies": {
+    "apollo-server": "^2.22.1",
     "chokidar": "^3.5.1",
     "fastify": "^3.13.0",
     "fastify-postgraphile": "^1.0.0",
+    "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
     "postgraphile": "^4.11.0"
   },
